<resources>
    <string name="app_name">King Puzzle</string>
    <string name="new_game">NEW GAME</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="settings">Settings</string>
    <string name="puzzle_king">PUZZLE KING</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="_12_items">12 items</string>
    <string name="calender">Calender</string>
    <string name="easy_level">EASY LEVEL</string>
    <string name="middle_level">Middle level</string>
    <string name="hard_level">Hard Level</string>
    <string name="facebook_app_id">262103938316263</string>
    <string name="fb_login_protocol_scheme">fb262103938316263</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="profile">Profile</string>
    <string name="hint">Hint</string>
    <string name="name">Name</string>
    <string name="click">Click</string>
    <string name="todo">TODO</string>

    <string name="name_here">Name here</string>
    <string name="e_mail">E-Mail</string>
    <string name="e_mail_here">e-mail here</string>
    <string name="district">District</string>
    <string name="language_here">language here</string>
    <string name="district_here">district here</string>
    <string name="mobile">Mobile</string>
    <string name="id">ID</string>
    <string name="mobile_no_here">mobile no here</string>
    <string name="language">Language</string>


</resources>
