<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/level"
    android:orientation="vertical"
    tools:context=".Level">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="629dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="289dp"
            android:layout_height="119dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/puzzle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:layout_width="373dp"
                android:layout_height="446dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <androidx.cardview.widget.CardView
                        android:layout_width="289dp"
                        android:layout_height="375dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="50dp"
                        android:layout_marginTop="100dp"
                        app:cardCornerRadius="28dp"
                        app:cardElevation="6dp"
                        tools:targetApi="lollipop">

                        <LinearLayout
                            android:layout_width="291dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/level01"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="190dp"
                                android:layout_height="152dp"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/square" />

                            <LinearLayout
                                android:layout_width="226dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/box1"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/easy_level01"
                                    android:layout_width="212dp"
                                    android:layout_height="51dp"
                                    android:layout_margin="40dp"
                                    android:layout_marginTop="90dp"
                                    android:layout_marginEnd="50dp"
                                    android:background="@drawable/box1"
                                    android:gravity="center_horizontal"
                                    android:text="@string/easy_level"
                                    android:textAlignment="center"
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="105dp"
                                android:layout_height="76dp"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/arrowright" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="279dp"
                        android:layout_height="375dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="50dp"
                        android:layout_marginTop="100dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="6dp"
                        tools:targetApi="lollipop">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/level00"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <LinearLayout
                                android:layout_width="226dp"
                                android:layout_height="wrap_content"
                                android:background="#EA67E6"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/middle_level"
                                    android:layout_width="229dp"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="40dp"
                                    android:layout_marginTop="70dp"
                                    android:layout_marginEnd="50dp"
                                    android:background="#DF19AD"
                                    android:gravity="center_horizontal"
                                    android:text="@string/middle_level"
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <ImageView

                                android:layout_width="105dp"
                                android:layout_height="76dp"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/arrowright" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="279dp"
                        android:layout_height="375dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="50dp"
                        android:layout_marginTop="100dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="6dp"
                        tools:targetApi="lollipop">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/level11"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <LinearLayout
                                android:layout_width="226dp"
                                android:layout_height="wrap_content"
                                android:background="#1469AA"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/hard_level"
                                    android:layout_width="229dp"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="40dp"
                                    android:layout_marginTop="70dp"
                                    android:layout_marginEnd="50dp"
                                    android:background="#4169E1"
                                    android:gravity="center_horizontal"
                                    android:text="@string/hard_level"
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <ImageView
                                android:layout_width="105dp"
                                android:layout_height="76dp"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/arrowright" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>